k8s-solace-deployment/solace-metallb-lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app.kubernetes.io/instance: broker
    app.kubernetes.io/managed-by: solace-pubsubplus-operator
    app.kubernetes.io/name: pubsubpluseventbroker
  name: broker-pubsubplus-metallb-svc
  namespace: anupam
spec:
  ports:
    - name: tcp-ssh
      port: 2222
      protocol: TCP
      targetPort: 2222
    - name: tcp-semp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: tls-semp
      port: 1943
      protocol: TCP
      targetPort: 1943
    - name: tcp-smf
      port: 55555
      protocol: TCP
      targetPort: 55555
    - name: tcp-smfcomp
      port: 55003
      protocol: TCP
      targetPort: 55003
    - name: tls-smf
      port: 55443
      protocol: TCP
      targetPort: 55443
    - name: tcp-smfroute
      port: 55556
      protocol: TCP
      targetPort: 55556
    - name: tcp-web
      port: 8008
      protocol: TCP
      targetPort: 8008
    - name: tls-web
      port: 1443
      protocol: TCP
      targetPort: 1443
    - name: tcp-rest
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: tls-rest
      port: 9443
      protocol: TCP
      targetPort: 9443
    - name: tcp-amqp
      port: 5672
      protocol: TCP
      targetPort: 5672
    - name: tls-amqp
      port: 5671
      protocol: TCP
      targetPort: 5671
    - name: tcp-mqtt
      port: 1883
      protocol: TCP
      targetPort: 1883
    - name: tls-mqtt
      port: 8883
      protocol: TCP
      targetPort: 8883
    - name: tcp-mqttweb
      port: 8000
      protocol: TCP
      targetPort: 8000
    - name: tls-mqttweb
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    active: "true"
    app.kubernetes.io/instance: broker
    app.kubernetes.io/name: pubsubpluseventbroker
  sessionAffinity: None
  loadBalancerClass: metallb
  type: LoadBalancer
