k8s-solace-deployment/solace-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solace-dashboard
  namespace: anupam
spec:
  ingressClassName: nginx
  rules:
    - host: solace-anupam.ocptnd1.prs
      http:
        paths:
          - backend:
              service:
                name: broker-pubsubplus
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
